src/test/testFiles/invalid/semanticErrors/binaryTreeInvalidChildAssignment.manimdsl
let y:Node<number> = Node<number>(5);

y.right = 3;